# calc

./: CMakeLists.txt  README.md  add.c  add.h  alloc.h  calc.c  calc.h  main.c  mult.c  mult.h  parse.c  parse.h  reverse.cpp
math/: mult.c  sub.h
utils/: alloc.c  parse.c  reverse.c  reverse.h
